Program logic completed for MIDI file downloading
The 'save' button is now created automatically, when a performance
completes. It responds to mouseover and mouseout events in the same
way as the svgPerformanceControls. It is deleted automatically when
clicked (the file is then downloaded), and when a performance
(both assisted and non-assisted) is started.
All that should now need to be done is to complete the
midiTracksDataToFileArray() function in jiMIDIFile.js.
Bug fix in jiScore.js, line 157: replaced 'chordDef' by 'chordIndex'.> This was preventing the startMarker from being set correctly.

--- a/assistantPerformerStyleSheet.css
+++ b/assistantPerformerStyleSheet.css
@@ -69,6 +69,18 @@ select.midiControlSelector
     margin-left: 3px;
     vertical-align:middle;
 }
+div.options
+{
+    font-size: 12px;
+    background-color: #F6F6F6;
+    border: 1px solid #008000;
+    margin-top: 10px;
+    margin-bottom:0px;
+    margin-left:125;
+    margin-right:125;
+    padding: 10;
+    text-align:center;
+}
 div.optionsPanel
 {
     margin-top: 8px;
