Minor bug fixes in assistantPerformerStyleSheet.cs
Added pages 4-7 of Song Six.

--- a/assistantPerformerStyleSheet.css
+++ b/assistantPerformerStyleSheet.css
@@ -76,17 +76,17 @@ div.options
     border: 1px solid #008000;
     margin-top: 10px;
     margin-bottom:0px;
-    margin-left:125;
-    margin-right:125;
-    padding: 10;
+    margin-left:125px;
+    margin-right:125px;
+    padding: 10px;
     text-align:center;
 }
 div.optionsPanel
 {
     margin-top: 8px;
     margin-bottom:2px;
-    margin-left:28;
-    margin-right:28;
+    margin-left:28px;
+    margin-right:28px;
     padding-top: 4px;
     padding-right: 12px;
     padding-bottom: 12px;
