Control substitution selectors are now visible/hidden
The selectors (in the performers options on the front
page) are now visible/hidden. They were previously
enabled/disabled.

--- a/assistantPerformerStyleSheet.css
+++ b/assistantPerformerStyleSheet.css
@@ -68,6 +68,7 @@ select.midiControlSelector
     margin-bottom: 1.5px;
     margin-left: 3px;
     vertical-align:middle;
+    visibility: hidden;
 }
 div.options
 {
