--- a/fontsStyleSheet.css
+++ b/fontsStyleSheet.css
@@ -1,7 +1,7 @@
 ﻿
 @font-face {
 	font-family: 'CLicht';
-	src: url('fonts/clicht_plain-webfont.eot'); /* IE9 Compat Modes */	
+	src: url('fonts/clicht_plain-webfont.woff'); /* Modern Browsers */	
 	src: url('fonts/clicht_plain-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
     url('fonts/clicht_plain-webfont.woff') format('woff'), /* Modern Browsers */ 
 	url('fonts/clicht_plain-webfont.ttf') format('truetype'), /* Safari, Android, iOS */ 
