--- a/assistantPerformerStyleSheet.css
+++ b/assistantPerformerStyleSheet.css
@@ -24,34 +24,11 @@ p.header1
     margin-bottom:6px
 }
 
-hr.hrHeight1
-{
-    border-style: none;
-    height: 1px;
-    background-color: #1010C6;
-}
-
-div.centredReference
-{
-    position:relative; 
-    text-align: left; 
-    top: 0px;
-    left: 0px;
-    width: 1446px;
-    padding: 0px; 
-    margin-top: 0px;  
-    margin-left: auto; 
-    margin-right: auto;
-	margin-bottom: 0px;
-}
 .helpColour
 {
     color: #8888FF;
 }
-.narrowLineHeight
-{
-    line-height: 15px;
-}
+
 select.deviceSelector
 {
     font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif;
@@ -60,45 +37,18 @@ select.deviceSelector
     margin-left: 8px;
     margin-right: 8px; 
 }
-select.midiControlSelector
-{
-    font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif;
-    font-size: 11px;
-    width: 115px;
-    margin-top: 2.5px;
-    margin-bottom: 1.5px;
-    margin-left: 3px;
-    vertical-align:middle;
-    visibility: hidden;
-}
+
 div.options
 {
     font-size: 12px;
     background-color: #F6F6F6;
     border: 1px solid #008000;
 	width:740px;
-    margin-top: 10px;
-    margin-bottom:0px;
-    margin-left:auto;
-    margin-right:auto;
+    margin: 10px auto 0 auto;
     padding: 10px;
     text-align:center;
 }
-div.optionsPanel
-{
-    margin-top: 8px;
-    margin-bottom:2px;
-    margin-left:28px;
-    margin-right:28px;
-    padding-top: 4px;
-    padding-right: 12px;
-    padding-bottom: 12px;
-    padding-left: 12px;                
-    text-align: left;
-    line-height: 18px; 
-    background-color: #FCFCFC;
-    border: 1px solid #008000; 
-}
+
 div.checkBoxCell
 {
      display:table-cell;
@@ -108,36 +58,11 @@ div.checkBoxCell
      padding-left: 3px;
      padding-right: 3px;
 }
-input.standardCheckBox14px
+
+div.runtimeDiv
 {
-    vertical-align: middle;
-    margin: 0px 3px -2px 0px;
-}          
-img.performanceControl
-{  
-    width: 21px;
-    height: 21px;
-    margin: 0px 4px 0px 0px;
-}
-img.channelControl
-{
-    width: 13px;
-    height: 22px;
-    margin: 0px 0px 0px 5px;
-}
-.svgControlPanel
-{
-    border-style: none; 
-    padding: 0px; 
-    margin: 0px;  
-    width: 960px;
-    height: 21px;
-    display:inline; 
-}
-.scoreFrame
-{
-    border-style: none; 
-    padding: 0px; 
-    margin: 0px;  
-    width: 1027px; 
+	position: absolute;
+	padding: 0;
+	margin: 0;
+	visibility: hidden;
 }
