Update #5 for Chrome 43
The midiAccess onstatechange handler is now
only active until the Start button is clicked.
(Otherwise starting and stopping the input
device from keyboard1 resets the input device
selector on page 1 -- undesirable when going
back to the opening page to play a different
score.)

--- a/assistantPerformerStyleSheet.css
+++ b/assistantPerformerStyleSheet.css
@@ -23,9 +23,10 @@ p.header1
     margin:15px auto 10px auto;
 }
 
-.helpColour
+div.helpText
 {
     color: #8888FF;
+	font-size: 12px;
 }
 
 select.deviceSelector
