Bug Fix and red warning text on page 1
Bug Fix: A live performance has an enabled
midi input device selector whose selectedIndex
is greater than 0. (Controls.js, line 1230)
The red warning on page 1 just says that this
program is liable to be updated without notice.
The link to the About Assistant Performer page on
my website is now larger, and reads:
"Usage and further information..."
I've added some Usage information there.

--- a/assistantPerformerStyleSheet.css
+++ b/assistantPerformerStyleSheet.css
@@ -29,6 +29,11 @@ div.helpText
 	font-size: 12px;
 }
 
+span.devText
+{
+    color: #f20d0d;
+}
+
 select.deviceSelector
 {
     font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif;
