Recompiled all scores afer font changes.
The fonts have been revised (in Moritz) following
the upgrade to Windows 10.
Added _all_ the fonts that are used in scores to the
assistant performer's fonts folder (and to the fonts
stylesheet) so that they should work on any OS.
Re-enabled Song Six

--- a/fontsStyleSheet.css
+++ b/fontsStyleSheet.css
@@ -16,3 +16,27 @@
 	line-height: normal;
 	font-family: 'CLicht';
 }
+
+@font-face {
+	font-family: 'Arial';
+	src: url('fonts/arial.ttf') format('truetype'); 
+	font-weight:400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	src: url('fonts/OpenSans-Regular.ttf') format('truetype'); 
+	font-weight:400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Open Sans Condensed';
+	src: url('fonts/OpenSans-CondBold.ttf') format('truetype'); 
+	font-weight:600;
+	font-style: normal;
+}
+
+}
+
