Updated annotated Song Six and main page

--- a/assistantPerformerStyleSheet.css
+++ b/assistantPerformerStyleSheet.css
@@ -25,11 +25,15 @@ p.header1
 
 div.helpText
 {
-    color: #8888FF;
 	font-size: 12px;
 }
 
-span.devText
+span.blueHelpText
+{
+    color: #8888FF;
+}
+
+span.redHelpText
 {
     color: #f20d0d;
 }
